tests/integration/targets/playbooks/provision_playbook/example.com/platform/jenkins/default/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tavros
  namespace: jenkins
  annotations:
    cert-manager.io/cluster-issuer: tavros
    kubernetes.io/ingress.class: prod
    konghq.com/strip-path: "true"
    konghq.com/protocols: https
    konghq.com/https-redirect-status-code: "302"
spec:
  rules:
    - host: ci.tavros.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jenkins-operator-http-tavros
                port:
                  number: 8080
  tls:
    - hosts:
        - ci.tavros.example.com
      secretName: ci-ingress-cert
